# MemoryAllocator

./: .gitignore  CMakeLists.txt  MemAllocDiags.xlsx  README.md
include/: first_fit_memory_allocator.h  free_list.h  memory_allocator.h
include/BuddySystem/: buddy_system_free_list  buddy_system_free_list.h  buddy_system_memory_allocator.h
include/FirstFit/: first_fit_free_list.h  first_fit_memory_allocator.h  free_list.h
include/NextFit/: next_fit_memory_allocator.h
include/PoolAllocation/: free_list.h  pool_allocation_free_list.h  pool_allocation_memory_allocator.h
test/: fragmentation_tests.cpp  performance_tests.cpp
test/BuddySystem/: buddy_system_tests.cpp
test/FirstFit/: first_fit_free_list_tests.cpp  first_fit_tests.cpp  free_list_tests.cpp
test/NextFit/: next_fit_tests.cpp
test/PoolAllocation/: pool_allocation_tests.cpp
